--- a/hanbit/.project
+++ b/hanbit/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>hanb-sts-grade-1604</name>
+	<name>hanbit</name>
 	<comment></comment>
 	<projects>
 	</projects>
